# advent-of-code-2022

./: .gitignore  README.md
day1/part1/: README.md  main.cpp
day1/part2/: CMakeLists.txt  README.md  main.cpp
day10/part1/: README.md  build.sbt
day10/part1/src/main/scala/: Main.scala
day10/part2/: README.md  build.sbt
day10/part2/src/main/scala/: Main.scala
day11/part1/: CMakeLists.txt  README.md  main.cpp
day11/part2/: README.md  main.cpp
day12/part1/: README.md
day12/part1/src/: main.rs
day12/part2/: README.md
day12/part2/src/: main.rs
day13/part1/: README.md  part1.ts
day13/part2/: README.md  part2.ts
day2/part1/: README.md
day2/part1/src/: main.rs
day2/part2/: README.md
day2/part2/src/: main.rs
day3/part1/: Part1.fsx  README.md
day3/part2/: Part2.fsx  README.md
day4/part1/: README.md  part1.py
day4/part2/: README.md  part2.py
day5/part1/: README.md  go.mod  part1.go
day5/part2/: README.md  go.mod  part2.go
day6/part1/: README.md  part1.nim
day6/part2/: README.md  part2.nim
day7/part1/: Program.cs  README.md
day7/part2/: Program.cs  README.md
day8/part1/: README.md  part1.jl
day8/part2/: README.md  part2.jl
day9/part1/: README.md  part1.py
day9/part2/: README.md  part2.py
